fix: skip migration wasnt maintaining language
